# devlogix_auth_service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  nginx.conf  pyproject.toml  script.sh
src/app/: config.py  ioc.py  main.py  provider.py
src/app/adapter/db/: __init__.py  connect.py
src/app/adapter/exceptions/: __init__.py  permission.py  permissions.py  security.py
src/app/adapter/migrations/: env.py
src/app/adapter/model/: __init__.py  user.py
src/app/adapter/permission/: __init__.py  user.py
src/app/adapter/permissions/: user.py
src/app/adapter/persistence/: __init__.py  broker.py  connect.py  db.py  redis.py
src/app/adapter/repository/: base.py  cookie_token.py  user.py
src/app/adapter/security/: __init__.py  jwt.py  password.py
src/app/application/: exceptions.py
src/app/application/exceptions/: __init__.py  auth.py  token.py  user.py
src/app/application/interface/: __init__.py  transaction.py
src/app/application/interfaces/: __init__.py  abstracttransaction.py  interactor.py  jwt.py  password.py  refresh_token.py  transaction.py  uow.py  user.py
src/app/application/model/: cookie_token.py  jwt.py  token.py  user.py
src/app/application/usecase/: auth.py  jwt.py  user.py
src/app/domain/model/: id.py  jwt.py  token.py  user.py
src/app/exceptions/: __init__.py  authentication.py  config.py  token.py  user.py
src/app/kernel/model/: cookie_token.py  user.py  user_id.py
src/app/kernel/permissions/: user.py
src/app/kernel/repository/: base.py  cookie_token.py  user.py
src/app/kernel/security/: jwt.py  password.py
src/app/main/: app.py  config.py  ioc.py
src/app/presentation/: constants.py  exception_handlers.py  interactor.py
src/app/presentation/after_request/: cookie.py  cookie_token.py  token.py
src/app/presentation/broker/: user.py
src/app/presentation/controller/: auth.py
src/app/presentation/controllers/: auth.py  jwt.py  user.py
src/app/presentation/exception_handlers/: user.py
src/app/tasks/: __init__.py
tests/unit/: conftest.py
(+120 files in other folders)
