[project]
name = "app"
version = "0.1.0"
description = "Auth Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar<=2.10.0",
    "python-ulid<=2.7.0",
    "sqlalchemy<=2.0.31",
    "uvicorn<=0.30.5",
    "alembic<=1.13.2",
    "asyncpg<=0.29.0",
    "pydantic<=2.8.2",
    "pyjwt<=2.9.0",
    "passlib<=1.7.4",
    "argon2-cffi<=23.1.0",
    "faststream[kafka]<=0.5.25",
    "dishka<=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest<=8.3.3",
    "pytest-asyncio<=0.24.0",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
